objects/alycecom__Alyce_Campaign__c.object
<CustomObject>
    <fields>
        <fullName>alycecom__Alyce_Campaign_Id__c</fullName>
        <externalId>true</externalId>
        <label>Alyce Campaign Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>alycecom__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Alyce Campaigns</relationshipLabel>
        <relationshipName>Alyce_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>alycecom__Is_Public__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>alycecom__Is_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>alycecom__Team_Id__c</fullName>
        <label>Team Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Alyce Campaign</label>
    <nameField>
        <label>Alyce Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alyce Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>